<resources>
    <string name="app_name">Playlist maker</string>
    <string name="search_button">Поиск</string>
    <string name="media_button">Медиатека</string>
    <string name="settings_button">Настройки</string>
    <string name="settings_screen_name">Настройки</string>
    <string name="dark_mode">Темная тема</string>
    <string name="share">Поделиться приложением</string>
    <string name="support">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>

    <string name="back_sup_button">Назад</string>
</resources>