<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yp_blue"
    android:orientation="vertical"
    android:paddingStart="20dp"
    android:paddingEnd="20dp"
    android:paddingBottom="28dp"
    tools:context=".MainActivity">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ys_display_m"
        android:text="@string/app_name"
        android:textSize="@dimen/main_text_size"
        android:paddingTop="14dp"
        android:paddingBottom="@dimen/main_bottom_pad"
        android:textColor="@color/yp_white"/>



    <Button
        android:id="@+id/search_button"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/main_bottom_pad"
        android:layout_weight="1"
        android:backgroundTint="@color/yp_white"
        android:fontFamily="@font/ys_display_m"
        android:textColor="@color/yp_black"
        android:textSize="@dimen/main_text_size"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/search_button"
        android:textAllCaps="false"
        android:letterSpacing="0"
        app:cornerRadius="@dimen/main_corner_rad"
        app:icon="@drawable/ic_search"
        app:iconTint="@color/yp_black"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/main_icon_pad"
        android:foreground="?attr/selectableItemBackground"/>

    <Button
        android:id="@+id/media_button"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/main_bottom_pad"
        android:layout_weight="1"
        android:backgroundTint="@color/yp_white"
        android:fontFamily="@font/ys_display_m"
        android:textColor="@color/yp_black"
        android:textSize="@dimen/main_text_size"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/media_button"
        android:textAllCaps="false"
        android:letterSpacing="0"
        app:cornerRadius="@dimen/main_corner_rad"
        app:icon="@drawable/ic_media"
        app:iconTint="@color/yp_black"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/main_icon_pad"
        android:foreground="?attr/selectableItemBackground"/>


    <Button
        android:id="@+id/settings_button"
        android:layout_width="match_parent"
        android:layout_height="0dp"

        android:layout_weight="1"
        android:backgroundTint="@color/yp_white"
        android:fontFamily="@font/ys_display_m"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/settings_button"
        android:textAllCaps="false"
        android:letterSpacing="0"
        android:textColor="@color/yp_black"
        android:textSize="@dimen/main_text_size"
        app:cornerRadius="@dimen/main_corner_rad"
        app:icon="@drawable/ic_settings"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/main_icon_pad"
        app:iconTint="@color/yp_black"
        android:foreground="?attr/selectableItemBackground"/>

</LinearLayout>